# sea_gull_hotel

./: .gitattributes  .gitignore  README.md  app.old.py  codebase.txt  gcb.js  package-lock.json
backend/: .env  Dockerfile  check_encoding.py  firebase_sa.b64  pyproject.toml  requirements.txt  seed_capacities.py  seed_restaurants.py  service-account.json  set_role.py  she3bo-test.txt
backend/alembic/: migration_script.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api_router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  capacities.py  config.py  reservations.py  restaurants.py  reviews.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/models/: auth.py  capacity.py  config.py  reservation.py  restaurant.py  review.py  user.py
backend/app/services/: auth.py  email.py  firestore.py
backend/app/utils/: datetime.py
backend/tests/: conftest.py  test_capacities.py  test_reservations.py  test_reviews.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  she3bo-notes.txt  tailwind.config.js  vite.config.js
frontend/.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index  packed-refs
frontend/.git_disabled/logs/: HEAD
frontend/public/: index.html
frontend/src/: App.jsx  firebase.js  i18n.js  index.css  index.jsx
frontend/src/components/: AuthLayout.jsx  (+6 more)
hotel-reservation/: MIGRATION_PROGRESS.md  PHASE_3_COMPLETE.md  README.md  angular.json  package-lock.json  package.json  tailwind.config.js  task.md
hotel-reservation/src/: index.html  main.ts  styles.scss
(+114 files in other folders)
